video overflow fix

--- a/Layout/Layout.module.css
+++ b/Layout/Layout.module.css
@@ -29,6 +29,7 @@
     height: 100%;
     object-fit: cover;
     z-index: 1;
+    overflow: hidden;
 }
 .header{
     grid-area: header;
